<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_checklist"
        android:textSize="16sp"
        android:hint="@string/add_checklist"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ib_schedule_checklist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_calendar"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/label_tv_date"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/tv_time"
            android:onClick="onClick"
            android:clickable="true"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tv_time"/>

    </LinearLayout>


</LinearLayout>
